[package]
name = "uwu_db"
version = "0.1.0"
authors = ["Nick Driscoll <nick.a.mavros@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#ozy_engine = { git = "https://github.com/NickDriscoll/ozy_engine" }
ozy_engine = { path = "C:\\Users\\Nick\\Desktop\\game_projects\\ozy_engine" }
sqlite = "0.26.0"
gl = "0.14.0"
glfw = "0.41.0"
imgui = "0.8.2"
nalgebra-glm = "0.13.0"
tinyfiledialogs = "3.8.3"
gif = "0.11.2"